First stab at a commit log viewer...

--- a/res/layout/repo_management.xml
+++ b/res/layout/repo_management.xml
@@ -6,13 +6,15 @@
     >
 <TextView  
     android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" android:text="Repository Location"/>
+    android:layout_height="wrap_content" android:text="Repository Location :"/>
 <TextView  
 	android:id="@+id/RepositoryFileLocation"
 	android:textStyle="bold"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" android:text="..."/>
 <Button android:text="Fetch" android:id="@+id/FetchButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
+<Button android:text="Log" android:id="@+id/LogButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
+
 <Button android:text="Delete" android:id="@+id/DeleteButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
 
 <TextView  
