--- a/res/layout/rev_commit_list.xml
+++ b/res/layout/rev_commit_list.xml
@@ -21,21 +21,8 @@
 		android:layout_height="10dip"
 		android:orientation="vertical"
 		android:background="@drawable/shadow" />
-	<LinearLayout
-		android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textColor="@color/textColor"
-			android:text="Select Branch: " />
-		<Spinner
-			android:id="@+id/spn_commits_list_branch_select"
-			android:layout_width="fill_parent"
-			android:layout_height="40dip" />
-	</LinearLayout>
 	<ListView
+		android:fastScrollEnabled="true"
 		android:id="@android:id/list"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
