--- a/res/layout/diff_view.xml
+++ b/res/layout/diff_view.xml
@@ -8,7 +8,8 @@
 	<TextView
 		android:id="@+id/diff_hunk_textview"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
+		android:layout_height="wrap_content"
+		android:typeface="monospace" />
 		
 		
 </LinearLayout>
