The progress bar just doesn't seem to show without this extra config...!
got style="?android:attr/progressBarStyleHorizontal" from:
http://bytecrafter.blogspot.com/2008/12/using-horizontal-progress-bar-in.html

--- a/res/layout/fetch_progress.xml
+++ b/res/layout/fetch_progress.xml
@@ -14,6 +14,7 @@
 		<ProgressBar android:id="@+id/status_progress"
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
 			android:layout_below="@id/status_text"
+			style="?android:attr/progressBarStyleHorizontal"
 			android:progressDrawable="@android:drawable/progress_horizontal"
 			android:indeterminate="false" android:indeterminateOnly="false" />
 
