--- a/agit/res/layout/main.xml
+++ b/agit/res/layout/main.xml
@@ -9,5 +9,15 @@
     android:layout_height="wrap_content" android:text="@string/enter_clone_url"/>
 
 <EditText android:layout_height="wrap_content" android:id="@+id/CloneUrlEditText" android:layout_width="fill_parent"></EditText>
+<CheckBox android:id="@+id/UseDefaultGitDirLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Use default location" />
+<EditText android:layout_height="wrap_content" android:id="@+id/GitDirEditText" android:layout_width="fill_parent"></EditText>
+<TextView 
+  android:id="@+id/GitDirWarning"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  android:text="Gumph"/>
 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/GoCloneButton" android:text="Clone!"></Button>
 </LinearLayout>
