--- a/agit/res/layout/rev_commit_view.xml
+++ b/agit/res/layout/rev_commit_view.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:background="#FFF"
-	android:orientation="vertical"
-	android:layout_height="fill_parent">
-	<include android:id="@+id/include_top_bar"
-		layout="@layout/top_bar" android:layout_weight="2" />
-	<ExpandableListView
-	android:fastScrollEnabled="true"
+	android:layout_width="fill_parent" android:background="#FFF"
+	android:orientation="vertical" android:layout_height="fill_parent">
+
+	<include android:id="@+id/include_top_bar" layout="@layout/top_bar" android:gravity="top"
+		android:layout_weight="2" />
+	<ExpandableListView android:fastScrollEnabled="true"
 		android:id="@android:id/list"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:cacheColorHint="#FFF" android:layout_weight="1"/>
-	<include android:id="@+id/rev_commit_view_include_diff_seekbar" layout="@layout/diff_seekbar_view" android:layout_weight="2"
-	android:layout_gravity="right"/>
+		android:layout_height="wrap_content" android:cacheColorHint="#FFF"
+		android:layout_weight="1" />
+
+
+	<LinearLayout android:layout_width="fill_parent" android:gravity="bottom"
+		android:layout_height="wrap_content" android:layout_weight="2"
+		android:orientation="horizontal">
+		<com.madgag.agit.DiffSliderView 
+		android:layout_width="wrap_content" android:layout_height="wrap_content" />
+	</LinearLayout> -->
 </LinearLayout>
