This still looks ok with switch in top right

--- a/agit/res/layout/rev_commit_view.xml
+++ b/agit/res/layout/rev_commit_view.xml
@@ -6,7 +6,7 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 
-	<LinearLayout android:layout_width="fill_parent"  android:layout_height="56dip"
+	<LinearLayout android:layout_width="fill_parent"  android:layout_height="wrap_content"
 	android:background="@drawable/top_bar" android:orientation="horizontal"  android:gravity="right">
 	
 		<com.madgag.agit.DiffSliderView 
