FINALLY got diff animation 'working' for real commits
Doesn't work too well though!

And where are my newlines?

--- a/agit/res/layout/diff_view.xml
+++ b/agit/res/layout/diff_view.xml
@@ -1,13 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:background="#FFF"
-	android:orientation="horizontal"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	>
-	<TextView
-		android:id="@+id/diff_hunk_textview"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:typeface="monospace" />
-</LinearLayout>
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
+
+</merge>
