--- a/agit/res/layout/branch_view.xml
+++ b/agit/res/layout/branch_view.xml
@@ -12,11 +12,13 @@
 		
 	</LinearLayout>
 	
+	<!--  
 	<ListView 
 		android:id="@android:id/list"
 		android:layout_width="fill_parent"
-		android:layout_height="fill_parent" android:cacheColorHint="#FFF" />
+		android:layout_height="fill_parent" android:cacheColorHint="#FFF" />-->
 
-
+	<com.madgag.agit.RevCommitListView android:id="@android:id/list"
+		android:layout_width="wrap_content" android:layout_height="wrap_content"  android:cacheColorHint="#FFF"/>
 
 </LinearLayout>
