Taking the title bar off so we can have an *Action Bar*
YEAH! Pattern 4: Action Bar

http://android-developers.blogspot.com/2010/05/twitter-for-android-closer-look-at.html

--- a/agit/res/values/styles.xml
+++ b/agit/res/values/styles.xml
@@ -15,7 +15,7 @@
     	<item name="android:textColor">@color/removedText</item>
 	</style>
 	
-	<style name="Theme.App" parent="android:Theme.Light">
+	<style name="Theme.App" parent="android:Theme.Light.NoTitleBar">
 	    <item name="android:fadeScrollbars">true</item>
 	 </style>
 </resources>
