--- a/agit/res/layout/branch_view.xml
+++ b/agit/res/layout/branch_view.xml
@@ -6,17 +6,10 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 
-	<LinearLayout android:layout_width="fill_parent"  android:layout_height="wrap_content"
-	android:background="@drawable/top_bar" android:orientation="horizontal"  android:gravity="right">
-	
-		
-	</LinearLayout>
-	
-	<!--  
-	<ListView 
-		android:id="@android:id/list"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent" android:cacheColorHint="#FFF" />-->
+	<com.markupartist.android.widget.ActionBar
+		    android:id="@+id/actionbar"
+		    style="@style/ActionBar"
+	        />
 
 	<com.madgag.agit.RevCommitListView android:id="@android:id/list"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"  android:cacheColorHint="#FFF"/>
