--- a/agit/res/layout/commit_view.xml
+++ b/agit/res/layout/commit_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/branch_layout_root"
 	android:orientation="vertical"
 	
 	android:layout_width="fill_parent"
@@ -22,7 +21,7 @@
 
         <TabWidget android:id="@android:id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="68dip"
+            android:layout_height="32dip"
             android:paddingLeft="1dip"
             android:paddingRight="1dip"
             android:paddingTop="4dip"
@@ -32,7 +31,16 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-        />
+        >
+        	<LinearLayout
+                      android:id="@+id/content"
+                      android:orientation="vertical"
+                      android:layout_width="fill_parent"
+                      android:layout_height="fill_parent">
+                      <TextView android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:text="I am a robot" />
+                 </LinearLayout>
+        </FrameLayout>
     </LinearLayout>
 </TabHost>
 	
