--- a/agit/res/layout/commit_view.xml
+++ b/agit/res/layout/commit_view.xml
@@ -69,6 +69,27 @@
 						android:typeface="monospace"
 						android:textAppearance="?android:attr/textAppearanceSmall"
 						/>
+						
+						
+						<LinearLayout
+						        android:orientation="horizontal"
+						        android:layout_width="match_parent"
+						        android:layout_height="wrap_content"
+						        android:height="100dip"
+						        >
+						        <LinearLayout
+							        android:id="@+id/commit_parent_navigation"
+							        android:orientation="vertical"
+							        android:layout_width="wrap_content"
+							        android:layout_height="match_parent"
+							        android:layout_weight="1" />
+						        <LinearLayout
+							        android:id="@+id/commit_child_navigation"
+							        android:orientation="vertical"
+							        android:layout_width="wrap_content"
+							        android:layout_height="match_parent"
+							        android:layout_weight="1" />
+						</LinearLayout>        
                  </LinearLayout>
         </FrameLayout>
     </LinearLayout>
