Got the nav buttons to stick to the bottom and the commit message to nicely fill the middle section
http://stackoverflow.com/questions/1215757/android-linearlayout-fill-the-middle

https://groups.google.com/forum/?lnk=gst&q=droidin#!topic/android-developers/oI5CcTzpT0M

"If, after all the wrap_content and fixed-sized items are allocated for
along an axis (horizontal or vertical), there is still room on that axis
left over, LinearLayout then allocates the remaining space to those
widgets with specified weights, in proportion to the weight"

--- a/agit/res/layout/commit_detail_view.xml
+++ b/agit/res/layout/commit_detail_view.xml
@@ -17,12 +17,14 @@
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
 		android:autoLink="web|email" />
 	<TextView android:id="@+id/commit_message_text"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:layout_width="fill_parent"
+		android:layout_height="0px"
+		android:layout_weight="1"
 		android:autoLink="web|email|map" android:typeface="monospace"
 		android:textAppearance="?android:attr/textAppearanceSmall" />
 
 	<com.madgag.agit.CommitNavigationView
 		android:id="@+id/commit_navigation"
 		android:layout_width="fill_parent"
-		android:layout_height="fill_parent" />
+		android:layout_height="100dip" />
 </LinearLayout>
