--- a/agit/res/layout/commit_detail_view.xml
+++ b/agit/res/layout/commit_detail_view.xml
@@ -19,7 +19,7 @@
 	<LinearLayout android:id="@+id/commit_refs_group"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
         
 	<TextView android:id="@+id/commit_message_text"
 		android:layout_width="fill_parent"
