--- a/agit/res/layout/commit_detail_view.xml
+++ b/agit/res/layout/commit_detail_view.xml
@@ -8,14 +8,12 @@
 	<TextView android:id="@+id/commit_id_text"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
 		android:typeface="monospace" />
-	<TextView android:id="@+id/commit_time_text"
-		android:layout_width="wrap_content" android:layout_height="wrap_content" />
-	<TextView android:id="@+id/commit_author_text"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:autoLink="web|email" />
-	<TextView android:id="@+id/commit_commiter_text"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:autoLink="web|email" />
+
+	<LinearLayout android:id="@+id/commit_people_group"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 	<LinearLayout android:id="@+id/commit_refs_group"
         android:orientation="vertical"
         android:layout_width="match_parent"
