--- a/agit/res/layout/person_ident_view.xml
+++ b/agit/res/layout/person_ident_view.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:orientation="horizontal"
+	android:layout_height="wrap_content"
 	android:padding="10dip">
+	<TextView
+		android:id="@+id/person_ident_title"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="7.5dip"
+		android:textStyle="bold"
+		android:text="Title" />
 	<ImageView
 		android:id="@+id/person_ident_avatar"
 		android:layout_width="36dip"
 		android:layout_height="36dip"
+		android:layout_below="@id/person_ident_title"
+		android:layout_alignRight="@id/person_ident_title"
 		android:scaleType="center"
 		android:background="@drawable/gravatar_border" />
 	<TextView
 		android:id="@+id/person_ident_name"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="7.5dip"
+		android:layout_toRightOf="@id/person_ident_avatar"
 		android:textStyle="italic"
-		android:text="someone" />
-</LinearLayout>
+		android:text="Someone" />
+</RelativeLayout>
