--- a/agit/res/layout/person_ident_view.xml
+++ b/agit/res/layout/person_ident_view.xml
@@ -15,7 +15,7 @@
 		android:layout_width="36dip"
 		android:layout_height="36dip"
 		android:layout_below="@id/person_ident_title"
-		android:layout_alignRight="@id/person_ident_title"
+		android:layout_alignLeft="@id/person_ident_title"
 		android:scaleType="center"
 		android:background="@drawable/gravatar_border" />
 	<TextView
@@ -23,6 +23,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_toRightOf="@id/person_ident_avatar"
+		android:layout_alignTop="@id/person_ident_avatar"
 		android:textStyle="italic"
 		android:text="Someone" />
 </RelativeLayout>
