--- a/agit/res/layout/person_ident_view.xml
+++ b/agit/res/layout/person_ident_view.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
+	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
+	android:layout_weight="1"
 	android:padding="10dip">
 	<TextView
 		android:id="@+id/person_ident_title"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="7.5dip"
 		android:textStyle="bold"
 		android:text="Title" />
 	<ImageView
@@ -26,4 +26,12 @@
 		android:layout_alignTop="@id/person_ident_avatar"
 		android:textStyle="italic"
 		android:text="Someone" />
+	<TextView
+		android:id="@+id/person_ident_when"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/person_ident_name"
+		android:layout_alignLeft="@id/person_ident_name"
+		android:textStyle="italic"
+		android:text="Sometime" />
 </RelativeLayout>
