A bit of object summary display in the Tag Viewer

--- a/agit/res/layout/tag_view.xml
+++ b/agit/res/layout/tag_view.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/tag_layout_root"
 	android:orientation="vertical"
-	
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 
 	<com.markupartist.android.widget.ActionBar
-		    android:id="@+id/actionbar"
-		    style="@style/ActionBar"
-	        />
+	    android:id="@+id/actionbar"
+	    style="@style/ActionBar"
+        />
 	
 	<com.madgag.agit.PersonIdentView
          android:id="@+id/tv_tag_tagger_ident"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
-	
-	<ListView 
-		android:id="@android:id/list"
+         
+    <TextView android:id="@+id/tv_tag_message"
 		android:layout_width="fill_parent"
-		android:layout_height="fill_parent" android:cacheColorHint="#FFF" />
+		android:layout_height="wrap_content"
+		android:autoLink="web|email|map" android:typeface="monospace"
+		android:textAppearance="?android:attr/textAppearanceSmall" />
+
+	<com.madgag.agit.ObjectSummaryView
+         android:id="@+id/tv_tag_tagged_object"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"/>
 </LinearLayout>
