--- a/agit/res/layout/object_summary_view.xml
+++ b/agit/res/layout/object_summary_view.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-
+<merge xmlns:android="http://schemas.android.com/apk/res/android" >
 	<ImageView
 		android:id="@+id/osv_object_type_icon"
 		android:layout_width="24dip"
@@ -14,4 +10,4 @@
 		android:layout_height="wrap_content"
 		android:typeface="monospace"
 		android:textAppearance="?android:attr/textAppearanceSmall" />
-</LinearLayout>
+</merge>
