--- a/agit/res/layout/person_ident_view.xml
+++ b/agit/res/layout/person_ident_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:layout_weight="1"
@@ -34,4 +34,4 @@
 		android:layout_alignLeft="@id/person_ident_name"
 		android:textStyle="italic"
 		android:text="Sometime" />
-</RelativeLayout>
+</merge>
