Fix duplication of type-specific summary views in Tag View
Also using a bit more injection

--- a/agit/res/layout/object_summary_view.xml
+++ b/agit/res/layout/object_summary_view.xml
@@ -10,4 +10,9 @@
 		android:layout_height="wrap_content"
 		android:typeface="monospace"
 		android:textAppearance="?android:attr/textAppearanceSmall" />
+	<FrameLayout
+		android:id="@+id/osv_type_specific_data_frame"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        />
 </merge>
